--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                 </ul>
             </div>
             <div id="lang">
-                <p id="imgbe"><img src="cl.JPG" width="100px" alt="Computer Languages Image" ></p>
+                <p id="imgbe"><img src="cl.jpg" width="100px" alt="Computer Languages Image" ></p>
                 <p class="skillsetClass">Languages</p>
                 <ul class="contentInDivs">
                     <li>Java</li>
