--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="rightSlide">
                 <h1 class="text">About Me</h1>
                 <p class="contentInSlides">
-                    I'm a Masters student, my Brain's teacher, Software Developer. Excited to know about me !! Just click here.
+                    I'm a Masters student and a passionate Software Developer. Excited to know about me !! Just click here.
                 </p>
             </div>
         </div>
