--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
             <div class="rightSlide">
                 <h1 class="text">Work Experience</h1>
                 <p class="contentInSlides">
-                    I have 3 years of Professional Experience where I worked in TCS with the technologies like
-                    Java, C#, ASP.NET, JavaScript, SQL and Python. Click to know more
+                    I have worked in TCS for 3 years with the technologies like Java, C#, ASP.NET,SQL. Click to know more
                 </p>
             </div>
         </div>
