Fixed blog links

--- a/index.html
+++ b/index.html
@@ -210,10 +210,10 @@
         <hr class="hrLine">
         <div id="blogsContent">
             <div>
-                <a href="https://medium.com/@kalyankancharla457/predicting-ipl-2020-winner-5c95f6cb338c"><img src="blog1.jpeg" class="blogImgs"></a>
+                <a href="https://medium.com/analytics-vidhya/cricket-analysis-and-prediction-a7e9a7f3ebef"><img src="blog1.jpeg" class="blogImgs"></a>
             </div>
             <div>
-                <a href="https://medium.com/analytics-vidhya/cricket-analysis-and-prediction-a7e9a7f3ebef"><img src="blog2.jpeg" class="blogImgs"></a>
+                <a href="https://medium.com/analytics-vidhya/predicting-ipl-2020-winner-5c95f6cb338c"><img src="blog_2.jpg" class="blogImgs"></a>
             </div>
         </div>
     </div>
