--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lora:ital@1&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lora:ital@1&family=Montserrat:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">   
+    <script type="text/javascript" src="myScript.js" defer></script>
 </head>
 <body>
     <div class="topnav" id="myTopnav">
@@ -198,6 +199,7 @@
                 <p class="skillsetClass">Back End</p>
                 <ul class="contentInDivs">
                     <li>Node.js</li>
+                    <li>Express.js</li>
                     <li>ASP.NET</li>
                 </ul>
             </div>
@@ -212,6 +214,22 @@
                     <li>Visual Basic</li>
                 </ul>
             </div>
+        </div>
+    </div>
+    <div id="Certifications">
+        <div class="headingArrow">
+            <p class="contentArrow">Certifications</p>
+        </div>
+        <hr class="hrLine">
+        <div class="slideshowContainerCert">
+            <div class="mySlidesCert fade">
+                <img src="Kalyan_SGBI.jpg" class="certificateImgs">
+            </div>
+            <div class="mySlidesCert fade">
+                <img src="Coursera_IBM_DataScience.jpg" class="certificateImgs">
+            </div>
+            <a class="prevNewCert" onclick="plusSlidesCert(-1)">&#10094;</a>
+            <a class="nextNewCert" onclick="plusSlidesCert(1)">&#10095;</a>
         </div>
     </div>
     <div id="Blogs">
@@ -280,81 +298,5 @@
         <a href="https://www.linkedin.com/in/kalyan-kumar-kancharla-44386a131/" class="links"><i class="fa fa-linkedin"></i></a>
         <a href="https://github.com/Kalyan457" class="links"><i class="fa fa-github"></i></a>
     </div>
-
-<script>
-    var slideIndex = 1;
-    var myTimer;
-    var slideshowContainer;
-
-    window.addEventListener("load",function() {
-        var slides = document.getElementsByClassName("rightSlide");
-        slides[0].addEventListener("click",function(){
-            location.href="#AboutMe";
-        },true);
-        slides[1].addEventListener("click",function(){
-            location.href="#WorkExperience";
-        },true);
-        slides[2].addEventListener("click",function(){
-            location.href="#Projects";
-        },true);
-        showSlides(slideIndex);
-        myTimer = setInterval(function(){plusSlides(1)}, 4000);
-        slideshowContainer = document.getElementsByClassName('slideshowContainer')[0];
-        slideshowContainer.addEventListener('mouseover', pause)
-        slideshowContainer.addEventListener('mouseleave', resume)
-    })
-
-    function plusSlides(n){
-        clearInterval(myTimer);
-        if (n < 0){
-            showSlides(slideIndex -= 1);
-        } else {
-        showSlides(slideIndex += 1); 
-        }  
-        if (n === -1){
-            myTimer = setInterval(function(){plusSlides(n + 2)}, 4000);
-        } else {
-            myTimer = setInterval(function(){plusSlides(n + 1)}, 4000);
-        }
-    }
-
-    function showSlides(n){
-        var i;
-        var slides = document.getElementsByClassName("mySlides");
-        if (n > slides.length) {slideIndex = 1}
-        if (n < 1) {slideIndex = slides.length}
-        for (i = 0; i < slides.length; i++) {
-            slides[i].style.display = "none";
-        }
-        slides[slideIndex-1].style.display = "flex";
-    }
-
-    pause = () => {
-        clearInterval(myTimer);
-    }
-
-    resume = () =>{
-        clearInterval(myTimer);
-        myTimer = setInterval(function(){plusSlides(slideIndex)}, 4000);
-    }
-
-    function videoOpen(){
-        var vid = document.getElementById("myVideo");
-        document.getElementById('id01').style.display='block';
-        vid.autoplay = true;
-        vid.load();
-    }
-
-    function myFunction() {
-
-        var x = document.getElementById("myTopnav");
-        if (x.className === "topnav") {
-            x.className += " responsive";
-        } else {
-            x.className = "topnav";
-        }
-    }
-
-</script>    
 </body>
 </html>
