--- a/index.html
+++ b/index.html
@@ -83,13 +83,22 @@
         <p class="contentInDivs">
             <h4 class="contentInDivs">I have three years of Professional Experience where I worked in TCS with the technologies like
                 Java,C#,ASP.NET,JavaScript,SQL,Python</h4>
-            <ul class="contentInDivs">
-                <li>Developed web applications for insurance agencies serving around 100 application users monthly</li>
-                <li>Worked with ASP.NET framework and SQL database which holds around 5000000 user data</li>
-                <li>Implemented around 10 new functionalities to an existing application without any issues</li>
-                <li>Automated recurring activities using .NET and SQL databases which saved 40 person hours monthly</li>
-                <li>Worked in AGILE, creating around 100 user stories, backlog refinements and sprint retrospective</li>
-            </ul>
+            <h4>Systems Engineer</h4>
+                <ul class="contentInDivs">
+                    <li>Converted the salesdesk application in VB6 to a web application using React.js, .NET Core and SQL.</li>
+                    <li>This holds the sales data of around 0.3 million agents and serving around 100 application users.</li>
+                    <li>Worked in AGILE creating around 100 user stories, backlog refinements and sprint retrospective.</li>
+                </ul>
+            <h4>Assitant Systems Engineer</h4>
+                <ul class="contentInDivs">
+                    <li>Developed the internal metrics dashboard for monitoring tickets using HTML, CSS and JavaScript.</li>
+                    <li>Automated daily, weekly and monthly reports using .NET and SQL saving 40 person hours monthly.</li>
+                </ul>
+            <h4>Assitant Systems Engineer Trainee</h4>
+                <ul class="contentInDivs">
+                    <li>Built a web application using ASP.NET, C#, SQL for maintaining contacts with functionalities to
+                        add/search/modify/delete a contact.</li>
+                </ul>
         </p>
     </div>
     <div id="Projects">
@@ -100,9 +109,9 @@
         <p class="contentInDivs">
             <ul class="contentInDivs">
                 <li onclick="location.href='#project1Div'" style='cursor:pointer'>LfrmM</li>
+                <li onclick="location.href='#project4Div'" style='cursor:pointer'>Job Apply</li>
                 <li onclick="location.href='#project2Div'" style='cursor:pointer'>Contact List Application</li>
                 <li onclick="location.href='#project3Div'" style='cursor:pointer'>Predicting IPL 2020 Winner</li>
-                <li onclick="location.href='#project4Div'" style='cursor:pointer'>Burger Builder</li>
             </ul>
         </p>
     </div>
